2026-02-01T01:05:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21553931258 # 864
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-01
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 691 1085 / 693 1087
* notice: next accum: outdated-unq outdated-all / unq all: 692 1086 / 694 1088
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2026-01-16] / [2026-01-30]

2026-01-31T00:53:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21535831252 # 863
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-31
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 690 1084 / 692 1086
* notice: next accum: outdated-unq outdated-all / unq all: 691 1085 / 693 1087
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2026-01-14 2026-01-15] / [2026-01-29]

2026-01-29T00:55:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21461365167 # 861
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-29
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 687 1081 / 690 1084
* notice: next accum: outdated-unq outdated-all / unq all: 690 1084 / 692 1086
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +1 +1 -0 -0 / 1 1